trunk/Archive2/86/44f18ab6a545e1/output
+ g++-4.8 -std=c++11 -Wall -pedantic -pthread main.cpp
main.cpp: In function ‘int main()’:
main.cpp:25:56: error: invalid use of brace-enclosed initializer list
     std::cout << array_checker<int, 4>().test({1,2,3,4}) << std::endl;
                                                        ^
